force-app/main/default/objects/FMG_OCAPI_Setting__mdt/FMG_OCAPI_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Collection of OCAPI Settings like, CLIENT_ID, CLIENT_SECRET, AUTH_URL etc.,</description>
    <label>FMG_OCAPI_Setting</label>
    <pluralLabel>FMG_OCAPI_Settings</pluralLabel>
</CustomObject>