force-app/main/default/objects/FMG_OCAPI_Setting__mdt/fields/Client_id__c.field-meta.xml
<CustomField>
    <fullName>Client_id__c</fullName>
    <label>Client_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>