force-app/main/default/objects/FMG_OCAPI_Setting__mdt/fields/Product_Size__c.field-meta.xml
<CustomField>
    <fullName>Product_Size__c</fullName>
    <defaultValue>&apos;75&apos;</defaultValue>
    <label>Product Size</label>
    <length>18</length>
    <type>Text</type>
</CustomField>