force-app/main/default/objects/FMG_OCAPI_Setting__mdt/fields/Product_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_URL__c</fullName>
    <label>Product URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>